--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,36 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<nav class="navbar is-danger" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    {{link-to "tabl-e|di|t" "index" class="navbar-item has-text-weight-bold"}}
 
+    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+  <div class="navbar-menu">
+    <div class="navbar-start">
+      {{link-to "About" "about" class="navbar-item"}}
+    </div>
+
+    <div class="navbar-end">
+      {{#if session.isAuthenticated}}
+        <a class="navbar-item" onclick={{action "logout"}}>Logout</a>
+      {{else}}
+        {{link-to "Login" "login" class="navbar-item"}}
+      {{/if}}
+    </div>
+  </div>
+</nav>
+
+API Key: {{config.apiKey}} <br />
+
+{{#if session.isAuthenticated}}
+    Token: {{session.data.authenticated.access_token}} <br />
+    Authenticated
+    <p>Signed in as {{currentUser.username}}</p>
+{{else}}
+    Not authenticated
+{{/if}}
+<hr>
 {{outlet}}
