--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,3 +1,5 @@
-<div class="container has-text-centered">
-  <button class="button is-large" onclick={{action "login"}}>Log in to babili</button>
-</div>
+<section class="section">
+  <div class="container has-text-centered">
+    <button class="button is-large" onclick={{action "login"}}>Log in to babili</button>
+  </div>
+</section>
